--- a/science.html
+++ b/science.html
@@ -42,7 +42,16 @@
       </ul>
     </section>
   </div>
-
+<h3>Our Wobbly Moon</h3>
+<p>When we think of the way the Moon seems to change over the course of a month, we think of phases. But frequent Moon observers know that the Moon also appears to twist, nod, and roll slightly during its journey across the sky, allowing us to peek around the Moon's shoulder and catch glimpses of the farside.
+This phenomenon is called libration.
+<img src="moonphases.m4" alt="moonphases">
+Because the Moons orbit is not perfectly circular, its distance from Earth and its speed in orbit both change slightly throughout the month. The Moon’s rate of rotation around its own axis, though, always stays the same.
+When the Moon is at its closest to Earth and moving most quickly along its orbital path, the Moon itself doesn’t rotate quite fast enough to keep entirely the same side facing us, and we get to see a little more of the eastern side of the Moon. When the Moon is farthest from Earth and orbiting at its slowest, its rotation gets a little ahead, and we see a bit more of its western side. We call this motion “libration in longitude.”
+The 5 degree tilt of the Moons orbit also causes it to appear to nod, as though it were saying “yes.” The tilt sometimes brings the Moon above Earth’s northern hemisphere, and sometimes below Earth’s southern hemisphere, allowing us to see slightly more of the northern or southern hemispheres of the Moon. We call this motion “libration in latitude.”
+Finally, the Moon appears to tilt back and forth like a metronome. The tilt of the Moons orbit contributes to this, but it’s mostly due to the tilt of our Earth. Earth has a tilt of 23.5 degrees on its axis, which means that when we observe the Moon from Earth, it’s a little like we’re standing sideways on a ramp. If you look left, the ramp slopes up. If you look right, the ramp slopes down. In front of you, the horizon looks higher on the right and lower on the left. If you turn around, the horizon appears to tilt the opposite way.
+The tilted ramp works the same way as the tilted “platform” of the Earth beneath our feet. Every two weeks, we have to look in the opposite direction to see the Moon, and the ground beneath our feet is then tilted the opposite way as well.
+</p>
   <footer>&copy; 2026 Moon Phases Explorer</footer>
   <script src="js/script.js"></script>
 </body>
