--- a/science.html
+++ b/science.html
@@ -52,7 +52,7 @@ The 5 degree tilt of the Moons orbit also causes it to appear to nod, as though 
 Finally, the Moon appears to tilt back and forth like a metronome. The tilt of the Moons orbit contributes to this, but it’s mostly due to the tilt of our Earth. Earth has a tilt of 23.5 degrees on its axis, which means that when we observe the Moon from Earth, it’s a little like we’re standing sideways on a ramp. If you look left, the ramp slopes up. If you look right, the ramp slopes down. In front of you, the horizon looks higher on the right and lower on the left. If you turn around, the horizon appears to tilt the opposite way.
 The tilted ramp works the same way as the tilted “platform” of the Earth beneath our feet. Every two weeks, we have to look in the opposite direction to see the Moon, and the ground beneath our feet is then tilted the opposite way as well.
 </p>
-  <footer>&copy; 2026 Moon Phases Explorer</footer>
+  <footer> 2026 Moon Phases Explorer</footer>
   <script src="js/script.js"></script>
 </body>
 </html>
