--- a/science.html
+++ b/science.html
@@ -45,7 +45,10 @@
 <h3>Our Wobbly Moon</h3>
 <p>When we think of the way the Moon seems to change over the course of a month, we think of phases. But frequent Moon observers know that the Moon also appears to twist, nod, and roll slightly during its journey across the sky, allowing us to peek around the Moon's shoulder and catch glimpses of the farside.
 This phenomenon is called libration.
-<img src="moonphases.mp4" alt="moonphases">
+ <video width="640" height="360" controls>
+  <source src="videos/moonphases.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 Because the Moons orbit is not perfectly circular, its distance from Earth and its speed in orbit both change slightly throughout the month. The Moon’s rate of rotation around its own axis, though, always stays the same.
 When the Moon is at its closest to Earth and moving most quickly along its orbital path, the Moon itself doesn’t rotate quite fast enough to keep entirely the same side facing us, and we get to see a little more of the eastern side of the Moon. When the Moon is farthest from Earth and orbiting at its slowest, its rotation gets a little ahead, and we see a bit more of its western side. We call this motion “libration in longitude.”
 The 5 degree tilt of the Moons orbit also causes it to appear to nod, as though it were saying “yes.” The tilt sometimes brings the Moon above Earth’s northern hemisphere, and sometimes below Earth’s southern hemisphere, allowing us to see slightly more of the northern or southern hemispheres of the Moon. We call this motion “libration in latitude.”
