--- a/science.html
+++ b/science.html
@@ -46,7 +46,7 @@
 <p>When we think of the way the Moon seems to change over the course of a month, we think of phases. But frequent Moon observers know that the Moon also appears to twist, nod, and roll slightly during its journey across the sky, allowing us to peek around the Moon's shoulder and catch glimpses of the farside.
 This phenomenon is called libration.
  <video width="6999" height="650" controls>
-  <source src="videos/moonphases.mp4" type="video/mp4">
+  <source src="videos/moonphases.mp4" type="videos/mp4">
   Your browser does not support the video tag.
 </video>
 
