--- a/science.html
+++ b/science.html
@@ -45,8 +45,8 @@
 <h3>Our Wobbly Moon</h3>
 <p>When we think of the way the Moon seems to change over the course of a month, we think of phases. But frequent Moon observers know that the Moon also appears to twist, nod, and roll slightly during its journey across the sky, allowing us to peek around the Moon's shoulder and catch glimpses of the farside.
 This phenomenon is called libration.
-<video width="6999" height="650" controls>
-<source src="videos/moonphases.mp4" type="videos/mp4">
+<video width="4999" height="450" controls>
+<source src="video/moonphases.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 Because the Moons orbit is not perfectly circular, its distance from Earth and its speed in orbit both change slightly throughout the month. The Moon’s rate of rotation around its own axis, though, always stays the same.
