--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="experiments.html">Experiments</a></li>
       <li><a href="beliefs.html">Cultural Beliefs</a></li>
-    </ul>
+       <li><a href="quiz.html">quiz</a></li>
   </nav>
 
   <div class="container">
