--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,7 @@
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="experiments.html">Experiments</a></li>
       <li><a href="beliefs.html">Cultural Beliefs</a></li>
+      <li><a href="quiz.html">quiz</a></li>
     </ul>
   </nav>
 
@@ -40,7 +41,7 @@
     </section>
   </div>
 
-  <footer>&copy; 2026 Moon Phases Explorer</footer>
+  <footer>&copy;2026 Moon Phases Explorer</footer>
   <script src="js/script.js"></script>
 </body>
 </html>
