--- a/science.html
+++ b/science.html
@@ -56,6 +56,12 @@ The 5 degree tilt of the Moons orbit also causes it to appear to nod, as though 
 Finally, the Moon appears to tilt back and forth like a metronome. The tilt of the Moons orbit contributes to this, but it’s mostly due to the tilt of our Earth. Earth has a tilt of 23.5 degrees on its axis, which means that when we observe the Moon from Earth, it’s a little like we’re standing sideways on a ramp. If you look left, the ramp slopes up. If you look right, the ramp slopes down. In front of you, the horizon looks higher on the right and lower on the left. If you turn around, the horizon appears to tilt the opposite way.
 The tilted ramp works the same way as the tilted “platform” of the Earth beneath our feet. Every two weeks, we have to look in the opposite direction to see the Moon, and the ground beneath our feet is then tilted the opposite way as well.
 </p>
+<h4>Earthshine</h4>
+<p>Sometimes, when the Moon is in one of its crescent phases, we can still see the darkened area of the Moon’s nearside shining dimly. This effect is caused by the Sun’s light reflecting off Earth’s surface onto the face of the Moon. Because Earth at that point in its orbit is nearly full from the Moon’s perspective, the light it reflects, called earthshine, is bright enough to dimly illuminate the darkened surface.
+</p> <img src="Earthshine" alt="Earthshine.jpeg">
+<h5>Daytime moon</h5>
+<p>Though the Moon is often thought of as a nighttime visitor, it’s also visible during the day as a faint, pale presence. The best times to see a daytime Moon are perhaps during the first and last quarter phases, when the Moon is high enough above the horizon and at about 90 degrees from the Sun in the sky. This helps make the Sun’s reflected light bright enough to see as it reflects off of the Moon. The Moon can be seen in the daylit sky at any phase except for the new Moon, when it’s invisible to us, and full Moon, when it’s below the horizon during the day. The crescent through quarter phases are high in the sky during the day, but the daytime gibbous phases can be glimpsed only just before the Sun sets.</p>
+<img src="427_moonridge-800" alt="427_moonrige-800.jpg">
   <footer> 2026 Moon Phases Explorer</footer>
   <script src="js/script.js"></script>
 </body>
