--- a/quiz.html
+++ b/quiz.html
@@ -264,4 +264,4 @@
 
         function nextQuestion() {
             const selected = document.querySelector('input[name="answer"]:checked');
-            if (selecte
+            if(selected)
