--- a/science.html
+++ b/science.html
@@ -59,10 +59,10 @@ The tilted ramp works the same way as the tilted “platform” of the Earth ben
 <h4>Earthshine</h4>
 <p>Sometimes, when the Moon is in one of its crescent phases, we can still see the darkened area of the Moon’s nearside shining dimly. This effect is caused by the Sun’s light reflecting off Earth’s surface onto the face of the Moon. Because Earth at that point in its orbit is nearly full from the Moon’s perspective, the light it reflects, called earthshine, is bright enough to dimly illuminate the darkened surface.
 </p>    
-  <img src="Earthshine.jpeg" alt="Earthshine">
+  <img src="https://assets.science.nasa.gov/dynamicimage/assets/science/psd/lunar-science/internal_resources/389/Earthshine.jpeg?w=1600&h=1067&fit=clip&crop=faces%2Cfocalpoint" alt="Earthshine">
 <h5>Daytime moon</h5>
 <p>Though the Moon is often thought of as a nighttime visitor, it’s also visible during the day as a faint, pale presence. The best times to see a daytime Moon are perhaps during the first and last quarter phases, when the Moon is high enough above the horizon and at about 90 degrees from the Sun in the sky. This helps make the Sun’s reflected light bright enough to see as it reflects off of the Moon. The Moon can be seen in the daylit sky at any phase except for the new Moon, when it’s invisible to us, and full Moon, when it’s below the horizon during the day. The crescent through quarter phases are high in the sky during the day, but the daytime gibbous phases can be glimpsed only just before the Sun sets.</p>
-  <img src="moonridge.jpg" alt="moonridge">
+  <img src="https://assets.science.nasa.gov/dynamicimage/assets/science/psd/lunar-science/2023/08/427_moonridge-800.jpg?w=800&h=800&fit=crop&crop=faces%2Cfocalpoint" alt="moonridge">
   <footer> 2026 Moon Phases Explorer</footer>
   <script src="js/script.js"></script>
 </body>
