--- a/science.html
+++ b/science.html
@@ -30,7 +30,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/THE_EARTH_AND_SUN_and_MOON_RELATIONS..2.jpg" alt="Sun-Earth-Moon orbit diagram">
       
       <h3>The Eight Primary Phases</h3>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Lunar_Phases.jpg" alt="Labeled eight phases">
+      <img src="https://assets.science.nasa.gov/dynamicimage/assets/science/psd/lunar-science/internal_resources/603/moon-phases-jpl.png?w=1700&h=904&fit=clip&crop=faces%2Cfocalpoint" alt="Labeled eight phases">
       <ul>
         <li><strong>New Moon</strong>: Moon between Earth and Sun — dark side faces us.</li>
         <li><strong>Waxing Crescent</strong>: Thin sliver of light on the right.</li>
