--- a/quiz.html
+++ b/quiz.html
@@ -62,7 +62,7 @@
     <div id="quiz">
         <div class="question" id="q1">
             <p>1. What is the first phase of the moon in a cycle?</p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/New_moon.jpg/200px-New_moon.jpg" alt="New Moon">
+            <img src="https://assets.science.nasa.gov/dynamicimage/assets/science/psd/lunar-science/internal_resources/366/new-moon.jpg?w=640&h=613&fit=clip&crop=faces%2Cfocalpoint" alt="New Moon">
             <div class="options">
                 <button onclick="checkAnswer('q1', 'B')">A) Full Moon</button>
                 <button onclick="checkAnswer('q1', 'B')">B) New Moon</button>
@@ -73,7 +73,7 @@
         
         <div class="question" id="q2" style="display:none;">
             <p>2. During which phase does the moon look like a growing smile?</p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Waxing_crescent.jpg/200px-Waxing_crescent.jpg" alt="Waxing Crescent">
+            <img src="https://assets.science.nasa.gov/dynamicimage/assets/science/psd/lunar-science/internal_resources/368/waxing-crescent.jpg?w=640&h=613&fit=clip&crop=faces%2Cfocalpoint" alt="Waxing Crescent">
             <div class="options">
                 <button onclick="checkAnswer('q2', 'C')">A) Waning Crescent</button>
                 <button onclick="checkAnswer('q2', 'C')">B) Waxing Gibbous</button>
