--- a/quiz.html
+++ b/quiz.html
@@ -7,18 +7,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #66ace9;
+            background-color: #c0c4c7;
             color: #030303;
             text-align: center;
             padding: 20px;
         }
         h1 {
-            color: #54e292;
+            color: #535353;
         }
         .question {
             margin: 20px 0;
             padding: 15px;
-            background-color: #328bd3;
+            background-color: #c1c3c5;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(3, 3, 3, 0.1);
         }
@@ -30,7 +30,7 @@
         button {
             margin: 5px;
             padding: 10px 20px;
-            background-color: #67f86c;
+            background-color: #888f88;
             color: rgba(255, 255, 255, 0.89);
             border: none;
             border-radius: 5px;
@@ -38,7 +38,7 @@
             font-size: 16px;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #b4c0b4;
         }
         .result {
             margin-top: 20px;
