--- a/quiz.html
+++ b/quiz.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #c0c4c7;
+            background-color: #fdfeff;
             color: #030303;
             text-align: center;
             padding: 20px;
         }
         h1 {
-            color: #535353;
+            color: #757373;
         }
         .question {
             margin: 20px 0;
@@ -30,8 +30,8 @@
         button {
             margin: 5px;
             padding: 10px 20px;
-            background-color: #888f88;
-            color: rgba(255, 255, 255, 0.89);
+            background-color: #f1f5f1;
+            color: rgba(2, 2, 2, 0.89);
             border: none;
             border-radius: 5px;
             cursor: pointer;
