--- a/beliefs.html
+++ b/beliefs.html
@@ -19,6 +19,7 @@
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="experiments.html">Experiments</a></li>
       <li><a href="beliefs.html">Cultural Beliefs</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
   </nav>
 
